[metadata]
name = mlfinlab
version = 0.12.3
author = Hudson and Thames Quantitative Research
author_email = research@hudsonthames.org
licence = All Rights Reserved
licence-file = LICENSE.txt
description = MlFinlab helps portfolio managers and traders who want to leverage the power of machine learning by providing reproducible, interpretable, and easy to use tools.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://www.hudsonthames.org/
project_urls =
    Documentation = https://mlfinlab.readthedocs.io/en/latest/
    Bug Reports = https://github.com/hudson-and-thames/mlfinlab/issues
    Project Boards = https://github.com/orgs/hudson-and-thames/projects
    Source = https://github.com/hudson-and-thames/mlfinlab
    Blog = https://hudsonthames.org/blog/
    Mentorship Program = https://hudsonthames.org/mentorship/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
keywords =
    machinelearning
    finance
    investment
    education

[options]
include_package_data = True
packages = find:
python_requires =
    <=3.11
setup_requires =
    setuptools
install_requires =
    anyio==3.0.1
    arrow==1.2.3
    contourpy==1.1.0
    cvxpy==1.3.2
    cycler==0.11.0
    debugpy==1.4.1
    decorator==5.1.0
    defusedxml==0.7.1
    ecos==2.0.12
    entrypoints==0.4
    fastjsonschema==2.15.1
    fonttools==4.42.1
    fqdn==1.5.1
    idna==3.3
    isoduration==20.11.0
    joblib==1.3.2
    json5==0.9.6
    jsonpointer==2.4
    jsonschema==4.3.3
    jsonschema-specifications==2023.7.1
    matplotlib==3.7.3
    numpy==1.24.4
    osqp==0.6.3
    pandas==2.1.0
    scikit-learn==1.3.0
    scipy==1.11.2
    scs==3.2.3
    seaborn==0.12.2


[options.packages.find]
package_dir =
    mlfinlab
exclude =
    contrib
    docs
